--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+.dark-theme{
+    --root_background: #1f1f1f;}
+    .light-theme{
+        --root_background: white;
+    }
+:root{
+    background-color: #1f1f1f;
+}
